@@ -3,3 +3,5 @@ Chema Celorio
 James Willcox <jwillcox@gnome.org>
 Federico Mena Quintero <federico@ximian.com>
 Paolo Borelli <pborelli@katamail.com>
+Steve Frécinaux <code@istique.net>
+Jesse van den Kieboom <jesse@icecrew.nl>
