@@ -1,3 +1,13 @@
+2006-11-25  Steve Frécinaux  <code@istique.net>
+
+	* gedit/gedit-window.c: show the whole file URI in the document menu
+	tooltips; replace $HOME with ~ in URIs; remove menu tooltip
+	ellipsization (useless) and fix a compilation warning (unused
+	variable).
+
+	* AUTHORS: add Jesse van den Kieboom and myself to sync with the about
+	dialog.
+
 2006-11-25  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-ui.xml: add a toplevel menu placeholder.
